--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <p id="aviso">¡Buen juego!</p>
         <p id="winner">Ganador: </p>
         <p id="loser">Perdedor: </p>
+        <p id="player1-choice">Jugador 1: </p>
+        <p id="player2-choice">Jugador 2: </p>
      <button onclick="resetGame()" id="Volver">Volver a jugar</button>
       </div>
     </div>
